--- a/catkin_ws/src/camera_calibration/package.xml
+++ b/catkin_ws/src/camera_calibration/package.xml
@@ -59,6 +59,16 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+    <build_export_depend>pcl_conversions</build_export_depend>
+    <build_export_depend>pcl_ros</build_export_depend>
+    <build_export_depend>roscpp</build_export_depend>
+    <build_export_depend>sensor_msgs</build_export_depend>
+    <exec_depend>pcl_conversions</exec_depend>
+    <exec_depend>pcl_ros</exec_depend>
+
+  <build_depend>libpcl-all-dev</build_depend>
+  <exec_depend>libpcl-all</exec_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
