find checkerboard s corners in ROS

--- a/catkin_ws/src/camera_calibration/CMakeLists.txt
+++ b/catkin_ws/src/camera_calibration/CMakeLists.txt
@@ -8,8 +8,10 @@ project(camera_calibration)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  OpenCV
   pcl_conversions
   pcl_ros
+  cv_bridge
   roscpp
   rospy
   std_msgs
@@ -122,6 +124,7 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
+
 )
 
 ## Declare a C++ library
@@ -138,7 +141,10 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(preProcessPC_node src/preProcessPC.cpp)
-target_link_libraries(preProcessPC_node ${catkin_LIBRARIES})
+target_link_libraries(preProcessPC_node ${catkin_LIBRARIES} )
+
+add_executable(camPoseEstimator_node src/camPoseEstimator.cpp)
+target_link_libraries(camPoseEstimator_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
