--- a/catkin_ws/src/camera_calibration/package.xml
+++ b/catkin_ws/src/camera_calibration/package.xml
@@ -58,6 +58,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
     <build_export_depend>pcl_conversions</build_export_depend>
     <build_export_depend>pcl_ros</build_export_depend>
