rough script to calculate the rotation matrix from the samples

--- a/catkin_ws/src/camera_calibration/CMakeLists.txt
+++ b/catkin_ws/src/camera_calibration/CMakeLists.txt
@@ -157,6 +157,9 @@ target_link_libraries(processor_node ${catkin_LIBRARIES} )
 add_executable(keyBoard_node src/keyBoard.cpp)
 target_link_libraries(keyBoard_node ${catkin_LIBRARIES} )
 
+add_executable(overlapScansOnImages_node src/keyBoard.cpp)
+target_link_libraries(overlapScansOnImages_node ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} )
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
