--- a/catkin_ws/src/camera_calibration/CMakeLists.txt
+++ b/catkin_ws/src/camera_calibration/CMakeLists.txt
@@ -157,7 +157,7 @@ target_link_libraries(processor_node ${catkin_LIBRARIES} )
 add_executable(keyBoard_node src/keyBoard.cpp)
 target_link_libraries(keyBoard_node ${catkin_LIBRARIES} )
 
-add_executable(overlapScansOnImages_node src/keyBoard.cpp)
+add_executable(overlapScansOnImages_node src/overlapScansOnImages.cpp)
 target_link_libraries(overlapScansOnImages_node ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} )
 
 ## Rename C++ executable without prefix
